fix: progress bar visibility

--- a/week6/css/relative-travel.css
+++ b/week6/css/relative-travel.css
@@ -6,6 +6,7 @@ body {
     background-color: rgb(246, 246, 238);
     min-height: 100px;
     padding: 40px;
+    font-family: 'Poppins';
 }
 
 .row {
@@ -23,12 +24,13 @@ body {
 }
 
 .container div {
-    width: 100%;
-    padding: 15px;
     box-sizing: border-box;
-    background-color: rgb(255, 255, 255);
     border-radius: 20px;
-    margin: 5px;
+}
+
+.card {
+    padding: 15px;
+    background-color: rgb(255, 255, 255);
 }
 
 .trip-image {
@@ -72,7 +74,11 @@ body {
     background: #fff;
     height: fit-content;
     box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
-    max-width: 200px;
+    max-width: 300px;
+    width: 250px;
+    padding: 15px;
+    display: flex;
+    margin: 5px;
 }
 
 .status {
@@ -80,6 +86,20 @@ body {
     font-size: 12px;
     margin-bottom: 5px;
     width: fit-content;
+}
+
+.circle-img {
+    margin: 10px;
+    width: 45px;
+    height: 45px;
+    border-radius: 50%;
+    object-fit: cover;
+    bottom: 100px;
+}
+
+.progress-card.card-info {
+    margin: 5px;
+    margin-top: -30px;
 }
 
 .progress-card h4 {
@@ -96,4 +116,40 @@ body {
 .percent {
     color: #6a5acd;
     font-weight: 500;
+    size: 10px;
+}
+
+.progress-bar {
+    background: #eee;
+    height: 8px;
+    width: 100%;
+    overflow: hidden;
+}
+
+.progress {
+    height: 100%;
+    background: #9b7bff;
+    border-radius: 4px;
+}
+
+@media (max-width: 1024px) {
+    .cards-row {
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    .progress-card {
+        right: -30px;
+    }
+}
+
+@media (max-width: 700px) {
+    .trip-card {
+        width: 280px;
+    }
+
+    .progress-card {
+        right: 0;
+        bottom: -70px;
+    }
 }
